--- a/css/login.css
+++ b/css/login.css
@@ -5,6 +5,28 @@
   border-radius: 5px;
   box-sizing: border-box;
 }
+#second-navbar {
+    background-color: #dde;
+    display: flex;
+    /* unlocks "flex" property for its children (<a> tags) */
+}
+
+#second-navbar a {
+    height: 50px;
+    flex: 1;
+    /* all of these <a> elements will "grow" an equal amount (so they all have an equal width) */
+    display: flex;
+    /* allows use of "justify-content" and "align-items" properties */
+    justify-content: center;
+    /* horizontally centers the contents (the text within) */
+    align-items: center;
+    /* vertically centers the contents (the text within) */
+}
+
+#second-navbar a:hover {
+    background-color: rgba(0, 0, 0, 0.1);
+    /* change color when hover over the link */
+}
 body{
   height: 100vh;
   display: flex;
@@ -105,55 +127,48 @@ form .button{
   cursor: pointer;
   font-family: 'Montserrat', sans-serif;
 }
-.container .auth{
+.container .option{
   margin: 35px 0 20px 0;
   font-size: 19px;
   color: grey;
+  text-align: center;
 }
 .links{
   display: flex;
   cursor: pointer;
 }
-.facebook, .google{
-  height: 40px;
+.container .facebook a,
+.container .twitter a{
+  display: block;
+  height: 45px;
   width: 100%;
-  border: 1px solid silver;
-  border-radius: 3px;
-  margin: 0 10px;
-  transition: .4s;
-}
-.facebook:hover{
-  border: 1px solid #4267B2;
-}
-.google:hover{
-  border: 1px solid #dd4b39;
-}
-.facebook i, .facebook span{
-  color: #4267B2;
-}
-.google i, .google span{
-  color: #dd4b39;
-}
-.links i{
-  font-size: 23px;
-  line-height: 40px;
-  margin-left: -90px;
-}
-.links span{
-  position: absolute;
-  font-size: 17px;
-  font-weight: bold;
-  padding-left: 8px;
-  font-family: 'Open Sans', sans-serif;
-}
-.signup{
-  margin-top: 50px;
-  font-family: 'Noto Sans', sans-serif;
-}
-.signup a{
-  color: #3498db;
+  font-size: 15px;
   text-decoration: none;
+  padding-left: 20px;
+  line-height: 45px;
+  color: #fff;
+  border-radius: 5px;
+  transition: all 0.3s ease;
 }
-.signup a:hover{
-  text-decoration: underline;
+
+.container .facebook i,
+.container .twitter i{
+  padding-right: 12px;
+  font-size: 20px;
+}
+.container .twitter a{
+  background: linear-gradient(to right,  #00acee 0%, #1abeff 100%);
+  margin: 20px 0 15px 0;
+}
+.container .twitter a:hover{
+  background: linear-gradient(to left,  #00acee 0%, #1abeff 100%);
+  margin: 20px 0 15px 0;
+}
+.container .facebook a{
+  background: linear-gradient( to right,  #3b5998 0%, #476bb8 100%);
+  margin: 20px 0 50px 0;
+}
+.container .facebook a:hover{
+  background: linear-gradient( to left,  #3b5998 0%, #476bb8 100%);
+  margin: 20px 0 50px 0;
 }
